@@ -11,33 +11,21 @@ dependencies {
 }
 compileJava {
 	doFirst {
-		options.compilerArgs = [
-			"--module-path",
-			classpath.asPath.replaceAll("DefaultPlugins",""),
-			"--add-modules",
-			"org.junit.jupiter.api",
-			"--enable-preview",
-			"--source",
-			"15",
-			"-Xlint:all"
-		]
+		options.compilerArgs +=
+				[
+					"--module-path",
+					classpath.asPath.replaceAll("DefaultPlugins",""),
+					"--add-modules",
+					"org.junit.jupiter.api"
+				]
 		classpath = files()
 	}
-	options.fork = true
-	options.incremental = true
 }
 
-tasks.withType(JavaCompile).each {
-	it.options.compilerArgs.add("--enable-preview")
-	it.options.compilerArgs.add("--target")
-	it.options.compilerArgs.add("15")
-	it.options.compilerArgs.add("-Xlint:all")
-}
 test {
 	testLogging {
 		events "passed", "skipped", "failed", "standardOut", "standardError"
 	}
-	jvmArgs = List.of("--enable-preview")
 	useJUnitPlatform()
 }
 jar {
@@ -52,12 +40,9 @@ task conquerResources(type: Jar) {
 	exclude "META-INF/services/**"
 	baseName = "Conquer_resources"
 }
-conquerResources.dependsOn(":auxiliary:buildDataZip")
-conquerResources.dependsOn(":DefaultPlugins:jar")
-conquerResources.mustRunAfter(":DefaultPlugins:jar")
-conquerResources.mustRunAfter(":auxiliary:buildDataZip")
-assemble.dependsOn(conquerResources);
-assemble.dependsOn(test)
+conquerResources.dependsOn(":auxiliary:buildDataZip",":DefaultPlugins:jar")
+conquerResources.mustRunAfter(":DefaultPlugins:jar",":auxiliary:buildDataZip")
+assemble.dependsOn(conquerResources,test)
 
 clean {
 	delete "src/main/resources/data"
@@ -67,32 +52,25 @@ task runTestsuite1(type:JavaExec) {
 	main = "org.jel.game.testsuite.Testsuite1"
 	classpath = sourceSets.main.runtimeClasspath
 	classpath += sourceSets.test.runtimeClasspath
-	allJvmArgs = ["--enable-preview"]
 }
 task runTestsuite2(type:JavaExec) {
 	main = "org.jel.game.testsuite.Testsuite2"
 	classpath = sourceSets.main.runtimeClasspath
 	classpath += sourceSets.test.runtimeClasspath
-	allJvmArgs = ["--enable-preview"]
 }
 task runTestsuite3(type:JavaExec) {
 	main = "org.jel.game.testsuite.Testsuite3"
 	classpath = sourceSets.main.runtimeClasspath
 	classpath += sourceSets.test.runtimeClasspath
-	allJvmArgs = ["--enable-preview"]
 }
 task runPerformanceTest(type:JavaExec) {
 	main = "org.jel.game.testsuite.PerformanceTest"
 	classpath = sourceSets.main.runtimeClasspath
 	classpath += sourceSets.test.runtimeClasspath
-	allJvmArgs = ["--enable-preview"]
 }
 task runTestsuites {
 }
 runTestsuite2.mustRunAfter(runTestsuite1)
 runTestsuite3.mustRunAfter(runTestsuite2)
 runPerformanceTest.mustRunAfter(runTestsuite3)
-runTestsuites.dependsOn(runTestsuite1)
-runTestsuites.dependsOn(runTestsuite2)
-runTestsuites.dependsOn(runTestsuite3)
-runTestsuites.dependsOn(runPerformanceTest)
+runTestsuites.dependsOn(runTestsuite1,runTestsuite2,runTestsuite3,runPerformanceTest)
