@@ -7,11 +7,6 @@ repositories {
 dependencies {
 	compile project(":Conquer")
 }
-tasks.withType(JavaCompile).each {
-	it.options.compilerArgs.add("--enable-preview")
-	it.options.compilerArgs.add("--target")
-	it.options.compilerArgs.add("15")
-}
 jar {
 	include "org/jel/game/plugins/builtins/ChangeCitiesMinds**"
 	include "org/jel/game/plugins/builtins/ClanChangeMessage**"
@@ -83,9 +78,4 @@ task periodicGrowthChangeJar(type: Jar) {
 		into("META-INF/services")
 	}
 }
-jar.dependsOn(sortedStrategyJar)
-jar.dependsOn(defaultMusicJar)
-jar.dependsOn(increaseGrowthJar)
-jar.dependsOn(moneyAnalyzerJar)
-jar.dependsOn(resourceAnalyzerJar)
-jar.dependsOn(periodicGrowthChangeJar)
+jar.dependsOn(sortedStrategyJar, defaultMusicJar,increaseGrowthJar,moneyAnalyzerJar,resourceAnalyzerJar,periodicGrowthChangeJar)
